force-app/main/default/objects/Location__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <description>Address line 1 of the location record</description>
    <label>Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>