force-app/main/default/objects/Location__c/fields/AnnouncementStatus__c.field-meta.xml
<CustomField>
    <fullName>AnnouncementStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Special Announcements will only be displayed when this field is marked as active</description>
    <label>Announcement Status</label>
    <type>Checkbox</type>
</CustomField>