force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City Name of the address of the location</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>