force-app/main/default/objects/Location__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Values of Counties Served</description>
    <label>Counties Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>County</valueSetName>
    </valueSet>
</CustomField>