force-app/main/default/objects/Location__c/fields/DaysLocationClosed__c.field-meta.xml
<CustomField>
    <fullName>DaysLocationClosed__c</fullName>
    <description>RE Resident view</description>
    <label>Location is closed on these days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DaysoftheWeek</valueSetName>
    </valueSet>
</CustomField>