force-app/main/default/objects/Location__c/fields/FridayClose__c.field-meta.xml
<CustomField>
    <fullName>FridayClose__c</fullName>
    <description>Indicates the closing time on Friday for the location</description>
    <label>FridayClose</label>
    <type>Time</type>
</CustomField>