force-app/main/default/objects/Location__c/fields/FridayOpen__c.field-meta.xml
<CustomField>
    <fullName>FridayOpen__c</fullName>
    <description>Indicates the opening time on Friday for the location</description>
    <label>FridayOpen</label>
    <type>Time</type>
</CustomField>