force-app/main/default/objects/Location__c/fields/LocationType__c.field-meta.xml
<CustomField>
    <fullName>LocationType__c</fullName>
    <description>Indicates whether the location record is headquarters or non-headquarters type</description>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headquarters</fullName>
            </value>
            <value>
                <fullName>Non Headquarters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>