force-app/main/default/objects/Location__c/fields/LocationWebsite__c.field-meta.xml
<CustomField>
    <fullName>LocationWebsite__c</fullName>
    <description>Website URL of the Location</description>
    <label>Location Website</label>
    <type>Url</type>
</CustomField>