force-app/main/default/objects/Location__c/fields/MondayClose__c.field-meta.xml
<CustomField>
    <fullName>MondayClose__c</fullName>
    <description>Indicates the closing time on Monday for the location</description>
    <label>MondayClose</label>
    <type>Time</type>
</CustomField>