force-app/main/default/objects/Location__c/fields/MondayOpen__c.field-meta.xml
<CustomField>
    <fullName>MondayOpen__c</fullName>
    <description>Indicates the opening time on Monday for the location</description>
    <label>MondayOpen</label>
    <type>Time</type>
</CustomField>