force-app/main/default/objects/Location__c/fields/ParkingInstructions__c.field-meta.xml
<CustomField>
    <fullName>ParkingInstructions__c</fullName>
    <description>If there are any additional instructions for parking at the location</description>
    <label>Parking Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>