force-app/main/default/objects/Location__c/fields/POCPhoneExt__c.field-meta.xml
<CustomField>
    <fullName>POCPhoneExt__c</fullName>
    <description>Phone Extension</description>
    <label>POCPhoneExt</label>
    <length>6</length>
    <type>Text</type>
</CustomField>