force-app/main/default/objects/Location__c/fields/PointofContactEmail__c.field-meta.xml
<CustomField>
    <fullName>PointofContactEmail__c</fullName>
    <description>Contact info for POC at this location</description>
    <label>Point of Contact Email</label>
    <type>Email</type>
</CustomField>