force-app/main/default/objects/Location__c/fields/PointOfContactName__c.field-meta.xml
<CustomField>
    <fullName>PointOfContactName__c</fullName>
    <description>Contact info for POC at this location</description>
    <label>Point Of Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>