force-app/main/default/objects/Location__c/fields/PointofContactPhone__c.field-meta.xml
<CustomField>
    <fullName>PointofContactPhone__c</fullName>
    <description>Contact info for POC at this location</description>
    <label>Point of Contact Phone</label>
    <type>Phone</type>
</CustomField>