force-app/main/default/objects/Location__c/fields/Rating_Count__c.field-meta.xml
<CustomField>
    <fullName>Rating_Count__c</fullName>
    <label>Rating Count</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>