force-app/main/default/objects/Location__c/fields/SaturdayClose__c.field-meta.xml
<CustomField>
    <fullName>SaturdayClose__c</fullName>
    <description>Indicates the closing time on Saturday for the location</description>
    <label>SaturdayClose</label>
    <type>Time</type>
</CustomField>