force-app/main/default/objects/Location__c/fields/SaturdayOpen__c.field-meta.xml
<CustomField>
    <fullName>SaturdayOpen__c</fullName>
    <description>Indicates the opening time on Saturday for the location</description>
    <label>SaturdayOpen</label>
    <type>Time</type>
</CustomField>