force-app/main/default/objects/Location__c/fields/SpecialAnnouncements__c.field-meta.xml
<CustomField>
    <fullName>SpecialAnnouncements__c</fullName>
    <description>Records any special announcements to display for location</description>
    <label>Special Announcements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>