force-app/main/default/objects/Location__c/fields/SpecialLocationInstructions__c.field-meta.xml
<CustomField>
    <fullName>SpecialLocationInstructions__c</fullName>
    <description>Any instrutions that would be helpful to the resident (Ex: Office is on third floor, 4th door on the right)</description>
    <label>Special Location Instructions</label>
    <type>TextArea</type>
</CustomField>