force-app/main/default/objects/Location__c/fields/SundayClose__c.field-meta.xml
<CustomField>
    <fullName>SundayClose__c</fullName>
    <description>Indicates the closing time on Sunday for the location</description>
    <label>SundayClose</label>
    <type>Time</type>
</CustomField>