force-app/main/default/objects/Location__c/fields/SundayOpen__c.field-meta.xml
<CustomField>
    <fullName>SundayOpen__c</fullName>
    <description>Indicates the opening time on Sunday for the location</description>
    <label>SundayOpen</label>
    <type>Time</type>
</CustomField>