force-app/main/default/objects/Location__c/fields/ThursdayClose__c.field-meta.xml
<CustomField>
    <fullName>ThursdayClose__c</fullName>
    <description>Indicates the closing time on Thursday for the location</description>
    <label>ThursdayClose</label>
    <type>Time</type>
</CustomField>