force-app/main/default/objects/Location__c/fields/ThursdayOpen__c.field-meta.xml
<CustomField>
    <fullName>ThursdayOpen__c</fullName>
    <description>Indicates the opening time on Thursday for the location</description>
    <label>ThursdayOpen</label>
    <type>Time</type>
</CustomField>