force-app/main/default/objects/Location__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <description>Time zone in which the hours open/close for the location is recorded</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>USTimeZones</valueSetName>
    </valueSet>
</CustomField>