force-app/main/default/objects/Location__c/fields/TransportationInstructions__c.field-meta.xml
<CustomField>
    <fullName>TransportationInstructions__c</fullName>
    <description>Additional Instructions, Public Transportation Notes, Parking, Etc.</description>
    <label>Transportation Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>