force-app/main/default/objects/Location__c/fields/TuesdayClose__c.field-meta.xml
<CustomField>
    <fullName>TuesdayClose__c</fullName>
    <description>Indicates the closing time on Tuesday for the location</description>
    <label>TuesdayClose</label>
    <type>Time</type>
</CustomField>