force-app/main/default/objects/Location__c/fields/TuesdayOpen__c.field-meta.xml
<CustomField>
    <fullName>TuesdayOpen__c</fullName>
    <description>Indicates the opening time on Tuesday for the location</description>
    <label>TuesdayOpen</label>
    <type>Time</type>
</CustomField>