force-app/main/default/objects/Location__c/fields/WednesdayClose__c.field-meta.xml
<CustomField>
    <fullName>WednesdayClose__c</fullName>
    <description>Indicates the closing time on Wednesday for the location</description>
    <label>WednesdayClose</label>
    <type>Time</type>
</CustomField>