force-app/main/default/objects/Location__c/fields/WednesdayOpen__c.field-meta.xml
<CustomField>
    <fullName>WednesdayOpen__c</fullName>
    <description>Indicates the opening time on Wednesday for the location</description>
    <label>WednesdayOpen</label>
    <type>Time</type>
</CustomField>