force-app/main/default/objects/Location__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>Address Information</description>
    <label>Zip</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>