force-app/main/default/objects/Location__c/fields/ZipExtensionCode__c.field-meta.xml
<CustomField>
    <fullName>ZipExtensionCode__c</fullName>
    <description>Address Information</description>
    <label>Zip Extension Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>