force-app/main/default/objects/Location__c/recordTypes/Location.recordType-meta.xml
<RecordType>
    <fullName>Location</fullName>
    <active>true</active>
    <description>This record type is used for  location object</description>
    <label>Location</label>
</RecordType>